Add Froc Calculation

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -404,7 +404,7 @@
     "\n",
     "model = os.path.join(models_directory, 'experiment_1\\csv_retinanet_19.pt')\n",
     "retinanet = torch.load(model)\n",
-    "visualize_network_outputs(retinanet, dataloader_val, dataset_val, num_images=10)\n"
+    "#visualize_network_outputs(retinanet, dataloader_val, dataset_val, num_images=10)\n"
    ]
   },
   {
@@ -417,7 +417,7 @@
     "experiment_2_directory = os.path.join(models_directory, 'experiment_2')\n",
     "\n",
     "\n",
-    "def validate_and_save(experiment_directory, coco_metrics=True, validation_json_file=None):\n",
+    "def validate_and_save(experiment_directory, coco_metrics=True, plot_froc=True, validation_json_file=None):\n",
     "    for model_name in os.listdir(experiment_directory):\n",
     "\n",
     "        if not model_name.endswith('.pt'):\n",
@@ -429,10 +429,6 @@
     "        else:\n",
     "            output_json_file = os.path.join(experiment_directory, f'{model_name}_metrics.json')\n",
     "\n",
-    "        if os.path.exists(output_json_file):\n",
-    "            print(f'{output_json_file} already exists. Skipping...')\n",
-    "            continue\n",
-    "\n",
     "        model_path = os.path.join(experiment_directory, model_name)\n",
     "        retinanet = torch.load(model_path)\n",
     "        if coco_metrics:\n",
@@ -441,8 +437,14 @@
     "            metrics_list = csv_eval.evaluate_coco_metrics(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path),\n",
     "        else:\n",
     "            metrics_list = csv_eval.evaluate(dataset_val,retinanet,iou_threshold=0.5,score_threshold=0.05,max_detections=1,save_path=None)\n",
-    "        with open(output_json_file, 'w') as f:\n",
-    "            json.dump(metrics_list, f, indent=4)"
+    "        \n",
+    "        if not os.path.exists(output_json_file):\n",
+    "            with open(output_json_file, 'w') as f:\n",
+    "                json.dump(metrics_list, f, indent=4)\n",
+    "\n",
+    "        if plot_froc:\n",
+    "            thresholds = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
+    "            csv_eval.evaluate_froc(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path, score_thresholds=thresholds)"
    ]
   },
   {
@@ -451,8 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_json_file = r'C:\\Users\\zaid-\\OneDrive\\Desktop\\PMSD\\Implementation\\Miccai 2022 BUV Dataset\\imagenet_vid_val.json'\n",
-    "validate_and_save(experiment_1_directory, validation_json_file=validation_json_file)"
+    "validation_json_file = r'C:\\Users\\zaid-\\OneDrive\\Desktop\\PMSD\\Implementation\\Miccai 2022 BUV Dataset\\imagenet_vid_val.json'"
    ]
   },
   {
@@ -461,8 +462,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validate_and_save(experiment_2_directory, validation_json_file=validation_json_file)"
+    "validate_and_save(experiment_1_directory, validation_json_file=validation_json_file)\n",
+    "#validate_and_save(experiment_2_directory, validation_json_file=validation_json_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
