--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,12 +440,12 @@
     "\n",
     "        if plot_froc:\n",
     "            thresholds = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "            #csv_eval.evaluate_froc(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path, score_thresholds=thresholds)"
+    "            coco_eval.evaluate_froc(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path, score_thresholds=thresholds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,13 +458,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_6_directory = os.path.join(models_directory, 'experiment_6')\n",
-    "experiment_7_directory = os.path.join(models_directory, 'experiment_7')\n",
-    "experiment_9_directory = os.path.join(models_directory, 'experiment_9')\n",
+    "experiment_num = 5\n",
+    "experiment_directory = os.path.join(models_directory, f'experiment_{experiment_num}')\n",
     "\n",
     "\n",
     "#validate_and_save(experiment_6_directory, validation_json_file=validation_json_file)\n",
-    "validate_and_save(experiment_9_directory, validation_json_file=validation_json_file)"
+    "validate_and_save(experiment_directory, validation_json_file=validation_json_file)"
    ]
   },
   {
@@ -539,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
