--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,59 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retinanet visualisation and Evaluation on the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append('./pytorch-retinanet')\n",
-    "from torchvision import transforms\n",
-    "from retinanet import model\n",
-    "from retinanet.dataloader import CocoDataset, Resizer, Normalizer\n",
-    "\n",
-    "model_path = r\"C:\\Users\\zaid-\\OneDrive\\Desktop\\PMSD\\Implementation\\retinanet_checkpoints\\coco_resnet_50_map_0_335_state_dict.pt\"\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "retinanet = model.resnet50(num_classes=80)\n",
-    "retinanet.load_state_dict(torch.load(model_path, map_location=device))\n",
-    "retinanet = retinanet.to(device)\n",
-    "\n",
-    "# Transform the image\n",
-    "transform = transforms.Compose([Normalizer(), Resizer()])\n",
-    "# Load the image as a PIL image\n",
-    "folder_path = r'C:\\Users\\zaid-\\OneDrive\\Desktop\\PMSD\\Implementation\\Miccai 2022 BUV Dataset\\rawframes\\benign\\2cda21c3aab26332'\n",
-    "image_path = load_images(folder_path)[0]\n",
-    "print(image_path)\n",
-    "image_pil = Image.open(image_path).convert('RGB')\n",
-    "\n",
-    "# Transform the image\n",
-    "sample = {'img': np.array(image_pil), 'annot': np.zeros((0, 5))}\n",
-    "transformed_sample = transform(sample)\n",
-    "transformed_image = transformed_sample['img'].permute(2, 0, 1).unsqueeze(0).to(device)\n",
-    "\n",
-    "# Set the model to evaluation mode\n",
-    "retinanet.eval()\n",
-    "\n",
-    "# Perform inference\n",
-    "with torch.no_grad():\n",
-    "    scores, classification, transformed_anchors = retinanet(transformed_image)\n",
-    "\n",
-    "# Process the results\n",
-    "for idx in range(scores.shape[0]):\n",
-    "    if scores[idx] > 0.5:  # Threshold for detection\n",
-    "        bbox = transformed_anchors[idx, :]\n",
-    "        x1, y1, x2, y2 = bbox[0].item(), bbox[1].item(), bbox[2].item(), bbox[3].item()\n",
-    "        label = int(classification[idx])\n",
-    "        print(f\"Detected object with score {scores[idx]:.2f} at [{x1}, {y1}, {x2}, {y2}] with label {label}\")\n",
-    "        plt.figure(figsize=(6, 6))\n",
-    "        plt.imshow(image_pil)\n",
-    "        plt.gca().add_patch(plt.Rectangle((x1, y1), x2 - x1, y2 - y1, edgecolor='red', facecolor='none', linewidth=2))\n",
-    "        plt.title(f'Detected object with score {scores[idx]:.2f}')\n",
-    "        plt.axis('off')\n",
-    "        plt.show()\n"
+    "## Retinanet Evaluation on the data"
    ]
   },
   {
@@ -326,95 +274,31 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import datasets, models, transforms\n",
     "\n",
-    "#from retinanet.dataloader import CocoDataset, CSVDataset, collater, Resizer, AspectRatioBasedSampler, UnNormalizer, Normalizer\n",
-    "from retinanet.dataloader_sequence import CocoDataset, collater, AspectRatioBasedSampler,Normalizer, Resizer\n",
-    "from retinanet import coco_eval\n",
+    "from retinanet.dataloader import CocoDataset, CSVDataset, collater, Resizer, AspectRatioBasedSampler, UnNormalizer, Normalizer\n",
+    "from retinanet import csv_eval, coco_eval\n",
     "\n",
     "csv_val = r\"C:\\Users\\zaid-\\OneDrive\\Desktop\\PMSD\\Implementation\\Miccai 2022 BUV Dataset\\val_annotations.csv\"\n",
     "csv_classes = r\"C:\\Users\\zaid-\\OneDrive\\Desktop\\PMSD\\Implementation\\Miccai 2022 BUV Dataset\\class_name.csv\"\n",
-    "dataset_val = CocoDataset('../Miccai 2022 BUV Dataset', set_name='imagenet_vid_val', sequence_length=3, transform=transforms.Compose([Normalizer(), Resizer()]), only_train_frames=False)\n",
+    "dataset_val = CocoDataset('../Miccai 2022 BUV Dataset', set_name='imagenet_vid_val', transform=transforms.Compose([Normalizer(), Resizer()]))\n",
     "sampler_val = AspectRatioBasedSampler(dataset_val, batch_size=1, drop_last=False)\n",
     "dataloader_val = DataLoader(dataset_val, num_workers=1, collate_fn=collater, batch_sampler=sampler_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_caption(image, box, caption):\n",
-    "    b = np.array(box).astype(int)\n",
-    "    cv2.putText(image, caption, (b[0], b[1] - 10), cv2.FONT_HERSHEY_PLAIN, 1, (0, 0, 0), 2)\n",
-    "    cv2.putText(image, caption, (b[0], b[1] - 10), cv2.FONT_HERSHEY_PLAIN, 1, (255, 255, 255), 1)\n",
+    "experiment_1_directory = os.path.join(models_directory, 'experiment_1')\n",
+    "experiment_2_directory = os.path.join(models_directory, 'experiment_2')\n",
+    "experiment_3_directory = os.path.join(models_directory, 'experiment_3')\n",
+    "experiment_4_directory = os.path.join(models_directory, 'experiment_4')\n",
+    "experiment_5_directory = os.path.join(models_directory, 'experiment_5')\n",
     "\n",
-    "def visualize_network_outputs(retinanet, dataloader_val, dataset_val, num_images=10, show_ground_truth=True):\n",
-    "    unnormalize = UnNormalizer()\n",
-    "    retinanet.eval()\n",
     "\n",
-    "    for idx, data in enumerate(dataloader_val):\n",
-    "        if idx >= num_images:\n",
-    "            break\n",
-    "        with torch.no_grad():\n",
-    "            st = time.time()\n",
-    "            if torch.cuda.is_available():\n",
-    "                scores, classification, transformed_anchors = retinanet(data['img'].cuda().float())\n",
-    "            else:\n",
-    "                scores, classification, transformed_anchors = retinanet(data['img'].float())\n",
-    "            print('Elapsed time: {}'.format(time.time() - st))\n",
-    "            idxs = np.where(scores.cpu() > 0.5)\n",
-    "            img = np.array(255 * unnormalize(data['img'][0, :, :, :])).copy()\n",
     "\n",
-    "            img[img < 0] = 0\n",
-    "            img[img > 255] = 255\n",
-    "            img = np.transpose(img, (1, 2, 0))\n",
-    "            img = cv2.cvtColor(img.astype(np.uint8), cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "            for j in range(idxs[0].shape[0]):\n",
-    "                bbox = transformed_anchors[idxs[0][j], :]\n",
-    "                x1 = int(bbox[0])\n",
-    "                y1 = int(bbox[1])\n",
-    "                x2 = int(bbox[2])\n",
-    "                y2 = int(bbox[3])\n",
-    "                label_name = dataset_val.labels[int(classification[idxs[0][j]])]\n",
-    "                #draw_caption(img, (x1, y1, x2, y2), label_name)\n",
-    "                cv2.rectangle(img, (x1, y1), (x2, y2), color=(255, 0, 0), thickness=2)\n",
-    "                print(label_name)\n",
-    "\n",
-    "            if show_ground_truth:\n",
-    "                annotations = data['annot'][0]\n",
-    "                for k in range(annotations.shape[0]):\n",
-    "                    bbox = annotations[k, :4]\n",
-    "                    x1 = int(bbox[0])\n",
-    "                    y1 = int(bbox[1])\n",
-    "                    x2 = int(bbox[2])\n",
-    "                    y2 = int(bbox[3])\n",
-    "                    cv2.rectangle(img, (x1, y1), (x2, y2), color=(0, 255, 0), thickness=2)\n",
-    "\n",
-    "            plt.figure(figsize=(5, 5))\n",
-    "            plt.imshow(img)\n",
-    "            plt.axis('off')\n",
-    "            plt.show()\n",
-    "\n",
-    "            # Evaluate the image and print metrics\n",
-    "            annotations = dataset_val.load_annotations(idx)\n",
-    "            detections = np.concatenate([transformed_anchors[idxs[0], :].cpu().numpy(), scores[idxs[0]].cpu().numpy().reshape(-1, 1)], axis=1)\n",
-    "            average_precisions = csv_eval.process_image(dataset_val[idx], retinanet, score_threshold=0.05, max_detections=1,)\n",
-    "            print(f\"Image {idx + 1} Evaluation Metrics:\")\n",
-    "            print(average_precisions[average_precisions[:, -1] == 0, :-1])\n",
-    "\n",
-    "model = os.path.join(models_directory, 'experiment_1\\csv_retinanet_19.pt')\n",
-    "retinanet = torch.load(model)\n",
-    "#visualize_network_outputs(retinanet, dataloader_val, dataset_val, num_images=10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate_and_save(experiment_directory, coco_metrics=True, plot_froc=True, validation_json_file=None):\n",
+    "def validate_and_save(experiment_directory, coco_metrics=True, plot_froc=False, validation_json_file=None):\n",
     "    for model_name in os.listdir(experiment_directory):\n",
     "\n",
     "        if not model_name.endswith('.pt'):\n",
@@ -424,28 +308,30 @@
     "        if coco_metrics:\n",
     "            output_json_file = os.path.join(experiment_directory, f'{model_name}_coco_metrics.json')\n",
     "        else:\n",
-    "            raise ValueError('Only COCO metrics are supported at the moment')\n",
-    "        \n",
+    "            output_json_file = os.path.join(experiment_directory, f'{model_name}_metrics.json')\n",
+    "\n",
     "        model_path = os.path.join(experiment_directory, model_name)\n",
     "        retinanet = torch.load(model_path)\n",
     "        if coco_metrics:\n",
     "            if not validation_json_file:\n",
     "                raise ValueError('validation_json_file must be provided when using COCO metrics')\n",
-    "            metrics_list = coco_eval.evaluate_coco_sequence(dataset_val, retinanet, model_path=model_path),\n",
+    "            #metrics_list = csv_eval.evaluate_coco_metrics(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path),\n",
+    "            metrics_list = coco_eval.evaluate_coco(dataset_val, retinanet, model_path=model_path),\n",
     "        else:\n",
-    "            raise ValueError('Only COCO metrics are supported at the moment')\n",
+    "            metrics_list = csv_eval.evaluate(dataset_val,retinanet,iou_threshold=0.5,score_threshold=0.05,max_detections=1,save_path=None)\n",
     "        \n",
-    "        with open(output_json_file, 'w') as f:\n",
-    "            json.dump(metrics_list, f, indent=4)\n",
+    "        if not os.path.exists(output_json_file):\n",
+    "            with open(output_json_file, 'w') as f:\n",
+    "                json.dump(metrics_list, f, indent=4)\n",
     "\n",
     "        if plot_froc:\n",
     "            thresholds = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "            coco_eval.evaluate_froc(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path, score_thresholds=thresholds)"
+    "            csv_eval.evaluate_froc(dataset_val, retinanet, buv_json_file=validation_json_file, model_path=model_path, score_thresholds=thresholds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,12 +344,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_num = 5\n",
-    "experiment_directory = os.path.join(models_directory, f'experiment_{experiment_num}')\n",
-    "\n",
-    "\n",
-    "#validate_and_save(experiment_6_directory, validation_json_file=validation_json_file)\n",
-    "validate_and_save(experiment_directory, validation_json_file=validation_json_file)"
+    "validate_and_save(models_directory, validation_json_file=validation_json_file)\n",
+    "#validate_and_save(experiment_2_directory, validation_json_file=validation_json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "model_path = 'C:/Users/zaid-/OneDrive/Desktop/PMSD/Implementation/pytorch-retinanet/trained_networks/experiment_4/coco_retinanet_13'\n",
+    "model = model_path + '.pt'\n",
+    "model = torch.load(model)\n",
+    "torch.save(model.state_dict(), f'{model_path}_model_weights.pt')"
    ]
   },
   {
@@ -471,55 +366,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!python train.py --dataset coco --coco_path \"../Miccai 2022 BUV Dataset\" --use_temporal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
-    "\n",
-    "# Initialize directed graph\n",
-    "G = nx.DiGraph()\n",
-    "\n",
-    "# Nodes for model architecture\n",
-    "nodes = [\n",
-    "    \"Input (B, T, C, H, W)\", \n",
-    "    \"ResNet Backbone\", \n",
-    "    \"Temporal Attention (C3, C4, C5)\", \n",
-    "    \"Feature Pyramid Network (FPN)\", \n",
-    "    \"Detection Heads (Classification + Regression)\", \n",
-    "    \"Anchors\", \n",
-    "    \"Outputs (BBoxes, Scores, Labels)\"\n",
-    "]\n",
-    "\n",
-    "# Add edges for model flow\n",
-    "edges = [\n",
-    "    (\"Input (B, T, C, H, W)\", \"ResNet Backbone\"),\n",
-    "    (\"ResNet Backbone\", \"Temporal Attention (C3, C4, C5)\"),\n",
-    "    (\"Temporal Attention (C3, C4, C5)\", \"Feature Pyramid Network (FPN)\"),\n",
-    "    (\"Feature Pyramid Network (FPN)\", \"Detection Heads (Classification + Regression)\"),\n",
-    "    (\"Detection Heads (Classification + Regression)\", \"Outputs (BBoxes, Scores, Labels)\"),\n",
-    "    (\"Feature Pyramid Network (FPN)\", \"Anchors\"),\n",
-    "    (\"Anchors\", \"Detection Heads (Classification + Regression)\")\n",
-    "]\n",
-    "\n",
-    "# Add nodes and edges to the graph\n",
-    "G.add_nodes_from(nodes)\n",
-    "G.add_edges_from(edges)\n",
-    "\n",
-    "# Draw the graph\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "pos = nx.spring_layout(G, seed=42)  # Generate layout\n",
-    "nx.draw(G, pos, with_labels=True, node_size=3000, node_color=\"lightblue\", font_size=10, font_weight=\"bold\", edge_color=\"gray\")\n",
-    "plt.title(\"Temporal RetinaNet Model Architecture\", fontsize=16)\n",
-    "plt.show()\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -538,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
